--- a/twojs-examples/svg-0.html
+++ b/twojs-examples/svg-0.html
@@ -1,11 +1,9 @@
 <!doctype html>
 <html>
   <head>
-    <meta name="viewport" content="user-scalable=no">
+    <title>Two.js - SVG interpreter</title>
     <meta charset="utf-8">
     <meta name="viewport" content="user-scalable=no">
-    <link rel="image_src" href="../images/logo.gif" />
-    <link rel="shortcut icon" type="image/gif" href="../images/favicon.gif">
     <script src="js/url.js"></script>
     <script src="js/jquery.js"></script>
     <script src="js/two.js"></script>
@@ -15,7 +13,6 @@
       }
       body {
         background: rgb(0, 0, 75);
-        background: rgb(245, 245, 245);
       }
     </style>
   </head>
@@ -29,7 +26,7 @@
       </svg>
 
       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" width="70px" height="70px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
-      	<path fill="crimson" d="M18.868,0.041c2.876-0.214,5.478,0.416,8.079,2.076c0.344,0.215,1.445,0.959,1.734,1.246
+      	<path  d="M18.868,0.041c2.876-0.214,5.478,0.416,8.079,2.076c0.344,0.215,1.445,0.959,1.734,1.246
   c0.344,0.357,2.739,2.462,3.207,3.149c0.234,0.329,2.519,3.422,2.519,3.422s2.175-2.592,2.56-3.035
   c0.66-0.73,1.28-1.203,1.762-1.604c1.403-1.188,2.835-2.248,4.446-3.278c1.128-0.73,3.068-1.403,4.101-1.56
   c0.289-0.043,1.061-0.157,1.404-0.215c3.923-0.63,9.001,1.145,11.878,3.006c3.179,2.047,5.367,5.067,7.06,8.847
@@ -58,29 +55,6 @@
     c0-2.537-1.42-5.985-5.985-5.985h-6.188V29.929z"/>
       </svg>
 
-      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" width="70px" height="70px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
-      	<path fill="crimson" d="M39.25,0.019c1.312-0.098,2.498,0.189,3.686,0.947c0.156,0.098,0.659,0.437,0.791,0.567
-  c0.156,0.164,1.248,1.123,1.461,1.436c0.108,0.151,1.15,1.561,1.15,1.561s0.992-1.182,1.167-1.384
-  c0.302-0.333,0.584-0.549,0.803-0.731c0.642-0.542,1.293-1.024,2.027-1.495c0.516-0.333,1.399-0.641,1.872-0.712
-  c0.13-0.02,0.484-0.071,0.64-0.098c1.788-0.287,4.104,0.522,5.418,1.371c1.447,0.934,2.447,2.311,3.22,4.035
-  c0.168,0.385,0.556,1.41,0.634,1.665c0.406,1.364,0.503,3.088,0.382,4.792c-0.18,2.65-1.198,5.374-2.285,7.018
-  c-0.218,0.326-0.721,1.279-1.329,2.102c-2.027,2.715-5.03,6.097-8.049,8.239c-0.847,0.603-4.091,2.591-4.091,2.591
-  s-3.385-2.115-3.924-2.486c-3.421-2.378-7.2-5.746-9.309-9.552c-0.734-1.326-1.582-2.664-2.065-4.284
-  c-0.226-0.744-0.428-1.383-0.584-2.213c-0.37-1.952-0.257-4.251,0.239-6.071c0.22-0.81,0.546-1.678,0.86-2.371
-  c1.137-2.474,3.245-4.1,6.02-4.733C38.422,0.117,38.842,0.045,39.25,0.019z"/>
-<path d="M12.653,23.343V9.637c-2.614-0.533-3.776-2.712-3.776-4.698C8.877,2.615,10.426,0,13.816,0h8.814
-  c3.341,0,4.794,2.615,4.794,4.939c0,1.985-1.114,4.165-3.632,4.698v13.706c2.566,0.484,3.777,2.711,3.777,4.648
-  c0,2.324-1.55,4.94-4.94,4.94h-8.814c-3.342,0-4.794-2.616-4.794-4.94C9.022,26.054,10.135,23.875,12.653,23.343z"/>
-<path d="M13.436,67.676C7.722,61.961,3.363,49.903,3.363,41.912c0-4.02,2.566-6.053,5.666-6.053c1.404,0,2.905,0.193,4.311,1.598
-  c1.211,1.211,1.792,3.438,2.082,5.666c0.63,5.133,1.356,9.346,3.681,13.56c0.145,0.242,0.484,0.242,0.629,0
-  c2.325-4.214,3.1-8.427,3.729-13.56c0.291-2.228,0.824-4.407,2.035-5.618c1.404-1.405,2.905-1.646,4.31-1.646
-  c3.1,0,5.279,2.033,5.279,6.053c0,7.991-4.408,20.049-10.122,25.764C23.073,69.563,20.99,70,19.199,70S15.325,69.563,13.436,67.676z
-  "/>
-<path d="M49.276,58.812v5.909c0,3.535-3.004,5.036-5.812,5.036c-2.615,0-5.666-1.501-5.666-5.036V41.33
-  c0-3.583,2.664-4.986,5.134-4.986h10.606c9.007,0,12.59,4.986,12.59,10.751c0,3.535-1.55,6.295-4.31,8.377
-  c2.664,2.664,4.746,6.151,4.746,8.911c0,3.68-2.566,5.375-5.23,5.375c-2.326,0-4.553-0.679-6.054-4.02s-2.712-5.375-5.375-6.926
-  H49.276z M49.081,50.63h2.955c2.179,0,2.856-1.794,2.856-2.906c0-1.211-0.678-2.857-2.856-2.857h-2.955V50.63z"/>
-</svg>
 
 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" width="70px" height="70px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
   <path d="M35.002,0L4.691,13.414L4.69,56.586L34.998,70l30.311-13.412l0.001-43.174L35.002,0z M36.884,32.488l6.616,5.17V23.313
@@ -116,12 +90,12 @@
           $('#assets svg').each(function(i, el) {
 
             var shape = two.interpret(el).center();
-            //shape.fill = 'black';
+            //shape.fill = 'white';
             shape.visible = false;
-            shape.noStroke();
-            //shape.stroke = 'white';
-            //shape.linewidth = 0.2;
-            //shape.noFill();
+            //shape.noStroke();
+            shape.stroke = 'white';
+            shape.linewidth = 0.2;
+            shape.noFill();
             shape.translation.set(two.width / 2, two.height / 2);
             shapes.push(shape);
             _.each(shape.children, function(child) {
@@ -144,8 +118,8 @@
             _.each(shape.children, function(child) {
               _.each(child.vertices, function(v) {
                 if (true){ // for now till i figure out how to ask for specific element ah
-                  var x = v.ox + Math.random()*0;
-                  var y = v.oy + Math.random()*0;
+                  var x = v.ox + Math.random()*1;
+                  var y = v.oy + Math.random()*1;
                 }else{
                   var x = v.ox + Math.random()*5;
                   var y = v.oy + Math.random()*5;
