tiny-three edit to threejs-examples

--- a/assignment-6.html
+++ b/assignment-6.html
@@ -49,7 +49,7 @@
             <h2><a href="index.html">IML 400 Spring 2015</a></h2>
             <h2>Assignment 6: Alternative web content</h2>
             <p>
-                Add a dynamic and/or interactive background or component to your cover page using WebGL, SVG or the HTML5 &lt;canvas&gt; tag.
+                Make a simple dynamic and/or interactive sketch using WebGL, SVG or the HTML5 &lt;canvas&gt; tag and your framework of choice. Add it as a background or as a component to your homepage for extra points. 
             </p>
 
             <h2>Due Date</h2>
