--- a/paperjs-particle-raster/particle-raster-1.html
+++ b/paperjs-particle-raster/particle-raster-1.html
@@ -69,7 +69,8 @@
 </head>
 <body>
 	<canvas id="canvas" resize></canvas>
-	<img width="512" height="512" id="my-image" style="display: none;" src="img/burroughs.jpg" />
+	<!--img size originally 512-->
+	<img width="256" height="256" id="my-image" style="display: none;" src="img/burroughs.jpg" />
 	<svg id="svg" style="position:absolute; background:black;"></svg>
 </body>
 </html>
