--- a/assignment-6.html
+++ b/assignment-6.html
@@ -59,10 +59,10 @@
 
              </p>
                 <ul><h3>Here are some examples to get you started</h3>
-                    <li>TwoJS <a href="">SVG based animation examples</a></li>
-                    <li>ThreeJS <a href="">3D Particle raster tool</a></li>
-                    <li>ThreeJS <a href="">Script loader and sketches</a></li>
-                    <li>PaperJS <a href="">2D Particle raster tool</a></li>
+                    <li>TwoJS animation examples - <a href="twojs-examples/svg-0.html">SVG 1</a> - <a href="twojs-examples/svg-1.html">SVG 2</a> - <a href="twojs-examples/tween-0.html">tweening</a></li> 
+                    <li>ThreeJS <a href="threejs-particle-raster">3D Particle raster tool</a></li>
+                    <li>ThreeJS <a href="threejs-examples">Script loader and sketches</a></li>
+                    <li>PaperJS 2D Particle raster tool - <a href="paperjs-particle-raster/particle-raster-0.html">example 1</a> - <a href="paperjs-particle-raster/particle-raster-1.html">example 2</a></li>
                 </ul>
             <p>
 
