updated twojs library

--- a/twojs-examples/tween-0.html
+++ b/twojs-examples/tween-0.html
@@ -17,7 +17,7 @@
       }
     </style>
   </head>
-  <body data-pinterest-extension-installed="cr1.3.2" style="overflow: hidden; margin: 0px; padding: 0px; top: 0px; left: 0px; right: 0px; bottom: 0px; position: fixed;">
+  <body>
     <div class="scripts">
       <script>
 
