added canvas examples

--- a/assignment-6.html
+++ b/assignment-6.html
@@ -59,6 +59,7 @@
 
              </p>
                 <ul><h3>Here are some examples to get you started</h3>
+                    <li>&lt;canvas&gt; examples - <a href="canvas-examples/canvas-clock.html">clock</a> - <a href="canvas-examples/cellular-automata.html">cellular automata</a> - <a href="canvas-examples/transformation-stack.html">transformation stack</a> - <a href="canvas-examples/draw.html">drawing pad</a></li>
                     <li>TwoJS animation examples - <a href="twojs-examples/svg-0.html">SVG 1</a> - <a href="twojs-examples/svg-1.html">SVG 2</a> - <a href="twojs-examples/tween-0.html">tweening</a></li> 
                     <li>ThreeJS <a href="threejs-particle-raster">3D Particle raster tool</a></li>
                     <li>ThreeJS <a href="threejs-examples">Script loader and sketches</a></li>
