linked to candy shader on assignment 6

--- a/assignment-6.html
+++ b/assignment-6.html
@@ -63,6 +63,7 @@
                     <li>TwoJS animation examples - <a href="twojs-examples/svg-0.html">SVG 1</a> - <a href="twojs-examples/svg-1.html">SVG 2</a> - <a href="twojs-examples/tween-0.html">tweening</a></li> 
                     <li>ThreeJS <a href="threejs-particle-raster">3D Particle raster tool</a></li>
                     <li>ThreeJS <a href="threejs-examples">Script loader and sketches</a></li>
+                    <li>ThreeJS <a href="threejs-examples/candy-shader.html">Candy shader</a></li>
                     <li>PaperJS 2D Particle raster tool - <a href="paperjs-particle-raster/particle-raster-0.html">example 1</a> - <a href="paperjs-particle-raster/particle-raster-1.html">example 2</a></li>
                 </ul>
             <p>
