adjusting vr scene cardboard example

--- a/threejs-examples/cardboard.html
+++ b/threejs-examples/cardboard.html
@@ -48,7 +48,7 @@
 
       scene = new THREE.Scene();
 
-      camera = new THREE.PerspectiveCamera(150, 1, 0.001, 700);
+      camera = new THREE.PerspectiveCamera(100, 1, 0.001, 700); // original focal length 90
       camera.position.set(0, 10, 0);
       scene.add(camera);
 
