links to VR examples in example page

--- a/examples.html
+++ b/examples.html
@@ -122,6 +122,33 @@
 			<li><a href="fall-2012/map-bg/flyover-teleporter.html">Google Maps API Flyover Teleporter</a></li>
 			<li><a href="fall-2012/map-bg/address-to-coordinates.html">Google Maps API Address to Coordinates</a> [Currently Broken]</li>
 		</ol>
+
+		<ol><h3>HTML5 &lt;canvas&gt;</h3>
+			<li><a href="canvas-examples/canvas-clock.html">Clock</a></li>
+			<li><a href="canvas-examples/cellular-automata.html">Cellular automata</a></li>
+			<li><a href="canvas-examples/transformation-stack.html">Transformation stack</a></li>
+			<li><a href="canvas-examples/draw.html">Drawing pad</a></li>
+		</ol>
+
+		<ol><h3>SVG and &lt;canvas&gt;</h3>
+			<li><a href="twojs-examples/svg-0.html">SVG 1</a> - <a href="twojs-examples/svg-1.html">SVG 2</a> - using TwoJS</li>
+			<li><a href="twojs-examples/tween-0.html">Tweening</a> - using TwoJS</li>
+			<li>2D Particle raster tool - <a href="paperjs-particle-raster/particle-raster-0.html">example 1</a> - <a href="paperjs-particle-raster/particle-raster-1.html">example 2</a> - using PaperJS</li>
+		</ol>
+
+		<ol><h3>WebGL and ThreeJS</h3>
+			<li><a href="threejs-particle-raster">3D Particle raster tool</a> - using ThreeJS</li>
+            <li><a href="threejs-examples">Script loader and sketches</a> - using ThreeJS</li>
+            <li><a href="threejs-examples/candy-shader.html">Candy shader</a> - using ThreeJS</li>
+		</ol>
+
+		<ol><h3>Web VR</h3>
+            <li><a href="threejs-examples/cardboard-boilerplate.html">Basic Google Chrome Cardboard Boilerplate</a> - using ThreeJS. Works on WebGl-enabled mobile browsers</li>
+            <li><a href="threejs-examples/cardboard-rings.html">Simple scene with cubemap for Google Cardboard</a> - using ThreeJS. Works on WebGl-enabled mobile browsers</li>
+            <li><a href="threejs-examples/mozvr-boilerplate.html">Basic MozVR Firefox / Oculus Rift Boilerplate</a> - using ThreeJS. Requires Firefox nightly build</li>
+            <li><a href="threejs-examples/mozvr-mockups.html">Simple MozVR Firefox / Oculus Rift web content browsing mockup</a> - using ThreeJS. Rrequires Firefox nightly build. Warning: slow to load. Sometimes needs to reload</li>
+		</ol>
+
 		<p style="text-align:center; margin:60px 0 0 0; padding:0;">
 	        <img src="fall-2012/images/roboteeno.png" style="display:block; margin:auto;"/>
 	    </p> 
