web vr additions and edits

--- a/assignment-6.html
+++ b/assignment-6.html
@@ -54,7 +54,7 @@
 
             <h2>Due Date</h2>
             <p>
-                <span class="due-date">Monday, March 9nd, 9:00am.</span>
+                <span class="due-date">Monday, March 9th, 9:00am.</span>
             </p>
 
              </p>
@@ -81,7 +81,7 @@
             
             <p>
                 <h2>Readings Due Date</h2>
-                <span class="due-date">Monday, March 9nd, 9:00am.</span>
+                <span class="due-date">Monday, March 9th, 9:00am.</span>
             </p>
             
             <p>
