--- a/syllabus-spring-2015.html
+++ b/syllabus-spring-2015.html
@@ -508,7 +508,7 @@ to Graphics Programming - Includes an interactive <a href="http://pixelshaders.c
 
 			<h3>Workshop</h3>
 			<ol>
-				<li>WebGL/Three.js, Paper.js/Raphael/Two.js, P5js, D3</li>
+				<li>VR Chrome experiments and MozVR</li>
 			</ol>
 
 			<h3>Assignments</h3>
@@ -518,9 +518,18 @@ to Graphics Programming - Includes an interactive <a href="http://pixelshaders.c
 
 			<h3>Readings</h3>
 			<ol>
-				<li>Mozilla, Virtual Reality, and the Dawn of the Metaverse? - Interview with Josh Carpenter - <a href="http://wemo.io/mozilla-virtual-reality-and-the-dawn-of-the-metaverse-511">http://wemo.io/mozilla-virtual-reality-and-the-dawn-of-the-metaverse-511</a></li>
-				<li>Google Chrome and the future of Virtual Reality - Interview with Brandon Jones - <a href="http://wemo.io/google-chrome-and-the-future-of-virtual-reality-interview-with-531">http://wemo.io/google-chrome-and-the-future-of-virtual-reality-interview-with-531</a></li>
-				<li>Leading the Way to a Virtual Reality Web - Interview with Tony Parisi - <a href="http://wemo.io/leading-the-way-to-a-virtual-reality-web-interview-with-540">http://wemo.io/leading-the-way-to-a-virtual-reality-web-interview-with-540</a></li>
+				<li>The Verge - <a href="http://www.theverge.com/a/virtual-reality">The Rise and Fall and Rise of Virtual Reality</a></li>
+				<li><a href="http://wemo.io/mozilla-virtual-reality-and-the-dawn-of-the-metaverse-511">Mozilla, Virtual Reality, and the Dawn of the Metaverse?</a> - Interview with Josh Carpenter on WeVR</li>
+				<li><a href="http://wemo.io/google-chrome-and-the-future-of-virtual-reality-interview-with-531">Google Chrome and the future of Virtual Reality</a> - Interview with Brandon Jones on WeVR</li>
+				<li><a href="http://wemo.io/leading-the-way-to-a-virtual-reality-web-interview-with-540">Leading the Way to a Virtual Reality Web</a> - Interview with Tony Parisi on WeVR</li>
+			</ol>
+
+			<h3>Web VR Resources</h3>
+			<ol>
+				<li><a href="http://mozvr.com/posts/quick-vr-prototypes/">Quick VR mockups with Adobe Illustrator</a>, by Josh Carpenter</li>
+				<li><a href="http://vr.chromeexperiments.com">Chrome Experiments for VR</a> -  Google Chrome Web VR tools for <a href="https://www.google.com/get/cardboard/">Google Cardboard</a></li>
+				<li><a href="http://mozvr.com">MozVR</a> - Mozilla / Firefox Web VR tools for <a href="https://developer.oculus.com">Oculus Rift</a></li>
+				<li><a href="http://vizor.io">Vizor</a> - Building VR in the browser</li>
 			</ol>
 		</section>
 
