web vr additions and edits

--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
                 <li><a href="assignment-4.html">Dive into Javascript</a></li>
                 <li><a href="assignment-5.html">Advanced Javascript with REST and AJAX</a></li>
                 <li><a href="assignment-6.html">Alternative web content with WebGL, &lt;canvas&gt; and SVG</a></li>
+                <li><a href="assignment-7.html">Welcome to the Metaverse</a></li>
             </ol>
         </div>
         
