web vr additions and edits

--- a/assignment-7.html
+++ b/assignment-7.html
@@ -86,7 +86,8 @@
                     <li><a href="http://mozvr.com">MozVR</a> - Mozilla / Firefox Web VR tools for <a href="https://developer.oculus.com">Oculus Rift</a>    </li>
                     <li><a href="http://vizor.io">Vizor</a> - Building VR in the browser</li>
                     <li><a href="http://elevr.com">eleVR</a> - Virtual Reality research group</li>
-                    <li>WeVR<a href="http://wemo.io/os">list of open source software for Web VR</a></li>
+                    <li><a href="http://http://player.elevr.com">eleVR VR video player</a> - Web based 360° spherical video player</li>
+                    <li><a href="http://wemo.io/os">list of open source software for Web VR</a> - via WeVR</li>
                 </ol>
             </p>
             <p style="text-align:center; margin:0; padding:0;">
