--- a/assignment-7.html
+++ b/assignment-7.html
@@ -87,7 +87,7 @@
                     <li><a href="http://vizor.io">Vizor</a> - Building VR in the browser</li>
                     <li><a href="http://elevr.com">eleVR</a> - Virtual Reality research group</li>
                     <li><a href="http://http://player.elevr.com">eleVR VR video player</a> - Web based 360° spherical video player</li>
-                    <li><a href="http://wemo.io/os">list of open source software for Web VR</a> - via WeVR</li>
+                    <li><a href="http://wemo.io/os">List of open source software for VR development</a> - a lot if it web based, via WeVR</li>
                 </ol>
             </p>
             <p style="text-align:center; margin:0; padding:0;">
