--- a/syllabus-spring-2015.html
+++ b/syllabus-spring-2015.html
@@ -501,7 +501,9 @@ to Graphics Programming - Includes an interactive <a href="http://pixelshaders.c
 			<h3>Discussion (Welcome to the Metaverse)</h3>
 			<ol>
 				<li>Previous assignment and reading discussion</li>
-				<li>Historical intro to Virtual Reality. Gibson, Stephenson, etc.</li>
+				<li>The immersive web, beyond the page and the screen: Virtual Reality, the Internet of Things and Augmented Reality</li>
+				<li>Historical intro to Virtual Reality. Gibson, Stephenson, etc</li>
+				<li>Virtual Reality today. Oculus Rift, Google Cardboard, Samsung Gear VR, HTC/Valve Vive - Mobile, desktop and room-scale</li>
 				<li>The 3D web and Virtual Reality</li>
 				<li>Web VR, Chromium, MozVR and GLAM</li>
 			</ol>
