--- a/assignment-7.html
+++ b/assignment-7.html
@@ -81,13 +81,19 @@
             
             <p>
                 <h2>Additional Resources</h2>
-                <ol><h3>Web VR</h3>
+                <ol><h3>Web VR tools and related content</h3>
                     <li><a href="http://vr.chromeexperiments.com">Chrome Experiments for VR</a> -  Google Chrome Web VR tools for <a href="https://www.google.com/get/cardboard/">Google Cardboard</a></li>
                     <li><a href="http://mozvr.com">MozVR</a> - Mozilla / Firefox Web VR tools for <a href="https://developer.oculus.com">Oculus Rift</a>    </li>
                     <li><a href="http://vizor.io">Vizor</a> - Building VR in the browser</li>
                     <li><a href="http://elevr.com">eleVR</a> - Virtual Reality research group</li>
                     <li><a href="http://http://player.elevr.com">eleVR VR video player</a> - Web based 360° spherical video player</li>
                     <li><a href="http://wemo.io/os">List of open source software for VR development</a> - a lot if it web based, via WeVR</li>
+                </ol>
+                <ol><h3>Web VR examples</h3>
+                    <li><a href="threejs-examples/cardboard-boilerplate.html">Basic Google Chrome Cardboard Boilerplate</a> - using ThreeJS. Works on WebGl-enabled mobile browsers</li>
+                    <li><a href="threejs-examples/mozvr-boilerplate.html">Basic MozVR Firefox / Oculus Rift Boilerplate</a> - using ThreeJS. Requires Firefox nightly build</li>
+                    <li><a href="threejs-examples/mozvr-mockups.html">Simple MozVR Firefox / Oculus Rift web content browsing mockup</a> - using ThreeJS. Rrequires Firefox nightly build. Warning: slow to load. Sometimes needs to reload a few times</li>
+                    <li>Simple scene with cubemap for <a href="threejs-examples/rings.html">desktop, tablet and mobile WebGl-enabled browsers</a>, <a href="threejs-examples/cardboard-rings.html">Google Cardboard</a>, and <a href="threejs-examples/mozvr-rings.html">MozVR Firefox / Oculus Rift</a> - using ThreeJS</li>
                 </ol>
             </p>
             <p style="text-align:center; margin:0; padding:0;">
