--- a/assignment-7.html
+++ b/assignment-7.html
@@ -92,8 +92,13 @@
                 <ol><h3>Web VR examples</h3>
                     <li><a href="threejs-examples/cardboard-boilerplate.html">Basic Google Chrome Cardboard Boilerplate</a> - using ThreeJS. Works on WebGl-enabled mobile browsers</li>
                     <li><a href="threejs-examples/mozvr-boilerplate.html">Basic MozVR Firefox / Oculus Rift Boilerplate</a> - using ThreeJS. Requires Firefox nightly build</li>
-                    <li><a href="threejs-examples/mozvr-mockups.html">Simple MozVR Firefox / Oculus Rift web content browsing mockup</a> - using ThreeJS. Rrequires Firefox nightly build. Warning: slow to load. Sometimes needs to reload a few times</li>
-                    <li>Simple scene with cubemap for <a href="threejs-examples/rings.html">desktop, tablet and mobile WebGl-enabled browsers</a>, <a href="threejs-examples/cardboard-rings.html">Google Cardboard</a>, and <a href="threejs-examples/mozvr-rings.html">MozVR Firefox / Oculus Rift</a> - using ThreeJS</li>
+                    <li><a href="threejs-examples/mozvr-mockups.html">Simple MozVR Firefox / Oculus Rift web content browsing mockup</a> - using ThreeJS. Requires Firefox nightly build. Warning: slow to load. Sometimes needs to reload a few times</li>
+                    <li>Simple scene with cubemap implemented for three different platforms:
+                        <ul>
+                            <li><a href="threejs-examples/rings.html">Desktop, tablet and mobile WebGL-enabled browsers</a></li>
+                            <li><a href="threejs-examples/cardboard-rings.html">Google Cardboard</a></li>
+                            <li><a href="threejs-examples/mozvr-rings.html">MozVR Firefox / Oculus Rift</a></li>
+                        </ul></li>
                 </ol>
             </p>
             <p style="text-align:center; margin:0; padding:0;">
