--- a/assignment-7.html
+++ b/assignment-7.html
@@ -95,7 +95,7 @@
                     <li><a href="threejs-examples/mozvr-mockups.html">Simple MozVR Firefox / Oculus Rift web content browsing mockup</a> - using ThreeJS. Requires Firefox nightly build. Warning: slow to load. Sometimes needs to reload a few times</li>
                     <li>Simple scene with cubemap implemented for three different platforms:
                         <ul>
-                            <li><a href="threejs-examples/rings.html">Desktop, tablet and mobile WebGL-enabled browsers</a></li>
+                            <li><a href="threejs-examples/rings.html">WebGL-enabled desktop / tablet / mobile browsers</a></li>
                             <li><a href="threejs-examples/cardboard-rings.html">Google Cardboard</a></li>
                             <li><a href="threejs-examples/mozvr-rings.html">MozVR Firefox / Oculus Rift</a></li>
                         </ul></li>
