--- a/assignment-7.html
+++ b/assignment-7.html
@@ -51,6 +51,9 @@
             <p>
                 Choose an online social media or entertainment service (facebook, twitter, youtube, netflix, etc), and develop a concept for a virtual reality experience using it’s content and data. Use writing, sketches, mockups and/or visual references from science fiction to illustrate your ideas.
             </p>
+            <p>
+                Publish your design proposal online as a simple webpage.
+            </p>
             </p>
                 <ul><h3>Useful prototyping template from MozVR</h3>
                     <li><a href="http://mozvr.com/posts/quick-vr-prototypes/">Quick VR mockups with Adobe Illustrator</a>, by Josh Carpenter</li>
