edit assignment 7. make it strong

--- a/assignment-7.html
+++ b/assignment-7.html
@@ -52,7 +52,7 @@
                 Choose an online social media or entertainment service (facebook, twitter, youtube, netflix, etc), and develop a concept for a virtual reality experience using it’s content and data. Use writing, sketches, mockups and/or visual references from science fiction to illustrate your ideas.
             </p>
             <p>
-                Publish your design proposal online as a simple webpage.
+                <strong>Publish your design proposal online as a simple webpage.</strong>
             </p>
             </p>
                 <ul><h3>Useful prototyping template from MozVR</h3>
