--- a/assignment-7.html
+++ b/assignment-7.html
@@ -102,6 +102,7 @@
                             <li><a href="threejs-examples/cardboard-rings.html">Google Cardboard</a></li>
                             <li><a href="threejs-examples/mozvr-rings.html">MozVR Firefox / Oculus Rift</a></li>
                         </ul></li>
+                    <li><a href="http://tparisi.github.io/glam/">GLAM</a> VR tutorial <a href="http://tparisi.github.io/glam/docs/manual/tutorials/adding-cardboardvr.html">Adding a Cardboard viewport</a></li>
                 </ol>
             </p>
             <p style="text-align:center; margin:0; padding:0;">
