--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
                 <li><a href="assignment-5.html">Advanced Javascript with REST and AJAX</a></li>
                 <li><a href="assignment-6.html">Alternative web content with WebGL, &lt;canvas&gt; and SVG</a></li>
                 <li><a href="assignment-7.html">Welcome to the Metaverse</a></li>
+                <li><a href="assignment-8.html">Net Art: Case studies</a></li>
             </ol>
         </div>
         
