--- a/assignment-8.html
+++ b/assignment-8.html
@@ -95,7 +95,7 @@
                     <li><a href="http://turboavedon.com/">LA Turbo Avedon</a></li>
                     <li><a href="http://builder.clubrothko.com/">club rothko builder</a></li>
                     <li><a href="http://www.irational.org/tttp/primera.html">Technologies for the People</a></li>
-                    <li><a href="http://vincemckelvie.com/">Vince Mckelvie</a> - <a href="http://vincemckelvie.tumblr.com/">Vince Mckelvie at tumblr</a> - <a href="http://emoji.ink/">Vince Mckelvie emoji.ink</a> - <a href="http://vincemckelvie.com/pulse/">Vince Mckelvie pulse</a></li>
+                    <li><a href="http://vincemckelvie.com/">Vince Mckelvie</a> - <a href="http://vincemckelvie.tumblr.com/">at tumblr</a> - <a href="http://emoji.ink/">emoji.ink</a> - <a href="http://vincemckelvie.com/pulse/">Pulse</a></li>
                 </ol>
             </p>
             <p style="text-align:center; margin:0; padding:0;">
