--- a/assignment-8.html
+++ b/assignment-8.html
@@ -49,7 +49,7 @@
             <h2><a href="index.html">IML 400 Spring 2015</a></h2>
             <h2>Assignment 8: Net Art Case studies</h2>
             <p>
-                Conceive and implement a Net Art Piece using a combination of javascript, gifs, and interactive text.
+                Conceive and implement a Net Art Piece using a combination of javascript, gifs, and interactive text. Or javascript, memes and interactive text. Or javascript, emoji and interactive text.
             </p>
 
 
@@ -76,11 +76,14 @@
                 <ol><h3>Selected Net Art readings</h3>
                     <li><a href="http://en.wikipedia.org/wiki/Internet_art">Internet Art</a> on Wikipedia</li>
                     <li><a href="http://en.wikipedia.org/wiki/Net.art">net.art</a> on Wikipedia</li>
+                    <li><a href="http://en.wikipedia.org/wiki/Internet_meme">Internet meme</a> on Wikipedia</li>
                     <li><a href="http://netspecific.net/en/netspecific/what-is-net-art">What is net art</a></li>
                     <li><a href="http://rhizome.org/">Rhizome</a> - <a href="http://rhizome.org/artbase/">Rhizome Artbase</a></li>
+                    <li><a href="http://turbulence.org/">Torbulence</a> Net Art foundation</li>
                     <li><a href="http://animalnewyork.com/2015/10-best-twitterbots-also-net-art/">The 10 best twitterbots that are also net art</a></li>
                 </ol>
                 <ol><h3>Selected Net Art sites and artists</h3>
+                    <li><a href="http://www.newrafael.com/">Rafaël Rozendaal</a></li> 
                     <li><a href="http://dan.nea.me/">dan.nea.me</a></li> 
                     <li><a href="http://yungjake.tumblr.com/">Jung Lake at tumblr</a></li> 
                     <li><a href="http://e.m-bed.de/d/">Jung Lake e.m-bed.de/d/</a> - requires pop-ups</li>
@@ -96,6 +99,13 @@
                     <li><a href="http://builder.clubrothko.com/">club rothko builder</a></li>
                     <li><a href="http://www.irational.org/tttp/primera.html">Technologies for the People</a></li>
                     <li><a href="http://vincemckelvie.com/">Vince Mckelvie</a> - <a href="http://vincemckelvie.tumblr.com/">at tumblr</a> - <a href="http://emoji.ink/">emoji.ink</a> - <a href="http://vincemckelvie.com/pulse/">Pulse</a></li>
+                </ol>
+                <ol><h3>Net Art Social Platforms and Commercialization</h3>
+                    <li><a href="http://to.be/">To.be</a> Net Art custom t-shirts and everything</li>
+                    <li><a href="http://newhive.com/">Newhive</a> is a multimedia publishing platform</li>
+                    <li><a href="http://www.so.cl/#/picotale">So.cl Picotale</a> Search based and meme maker</li>
+                    <li><a href="http://foxadhd.com/">Animation Domination High-Def</a> Cartoon based gif meme maker</li>
+                    <li><a href="http://gifpop.io/">Gifpop</a> lenticular gif prints</li>
                 </ol>
             </p>
             <p style="text-align:center; margin:0; padding:0;">
