--- a/assignment-8.html
+++ b/assignment-8.html
@@ -52,7 +52,7 @@
                 Conceive and implement a Net Art Piece using an ingenuous combination of css, javascript, gifs, memes, emoji, sound, video and/or interactive text. You're free to do anything you want except for this one condition: <strong>your piece must include a code-driven dynamic and/or interactive element</strong>.
             </p>
             <p>
-                Keep in mind that your piece must represent your notion of Net Art, and feel at home when surrounded by other explonents of Net Art. We can then have a IML 400 Net Art gallery :D
+                Keep in mind that your piece must represent your notion of Net Art, and feel at home when surrounded by other exponents of Net Art. We can then have a IML 400 Net Art gallery :D
             </p>
 
 
