--- a/assignment-8.html
+++ b/assignment-8.html
@@ -89,6 +89,7 @@
                     <li><a href="http://rhizome.org/">Rhizome</a> - <a href="http://rhizome.org/artbase/">Rhizome Artbase</a></li>
                     <li><a href="http://turbulence.org/">Torbulence</a> Net Art foundation</li>
                     <li><a href="http://animalnewyork.com/2015/10-best-twitterbots-also-net-art/">The 10 best twitterbots that are also net art</a></li>
+                    <li><a href="http://magazine.good.is/infographics/the-rise-of-the-data-artist">The rise of the data artist</a></li>
                 </ol>
                 <ol><h3>Selected Net Art sites and artists</h3>
                     <li><a href="http://www.newrafael.com/">Rafaël Rozendaal</a></li> 
