--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
                 <li><a href="assignment-6.html">Alternative web content with WebGL, &lt;canvas&gt; and SVG</a></li>
                 <li><a href="assignment-7.html">Welcome to the Metaverse</a></li>
                 <li><a href="assignment-8.html">Net Art: Case studies</a></li>
+                <li><a href="assignment-9.html">Putting It All Together: Making & Breaking the Web</a></li>
             </ol>
         </div>
         
