--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
                 <li><a href="assignment-7.html">Welcome to the Metaverse</a></li>
                 <li><a href="assignment-8.html">Net Art: Case studies</a></li>
                 <li><a href="assignment-9.html">Putting It All Together: Making & Breaking the Web</a></li>
+                <li><a href="assignment-10.html">Final Project Pre-Production Draft</a></li>
             </ol>
         </div>
         
