--- a/syllabus-spring-2015.html
+++ b/syllabus-spring-2015.html
@@ -628,11 +628,11 @@ to Graphics Programming - Includes an interactive <a href="http://pixelshaders.c
 
 			<h3>Discussion (Proposal critique and approval)</h3>
 			<ol>
-				<li>Previous assignment and reading discussion</li>
-				<li>Final project discussion. Expectations, process and delivery.</li>
+				<li>Proposal presentations and feedback</li>
+				<li>Reading discussion</li>
+				<li>Final project review. Expectation, process and delivery.</li>
 				<li>Thinking through an idea. Motivation, audience, goals. The web as product.</li>
 				<li>Practical design concepts (scoping, prototyping, iteration, modularity, etc)</li>
-				<li>Final project class brainstorm and Q&A.</li>
 			</ol>
 
 			<h3>Workshop</h3>
@@ -640,10 +640,12 @@ to Graphics Programming - Includes an interactive <a href="http://pixelshaders.c
 				<li>One-on-one final project research and discussion</li>
 			</ol>
 
-			<h3>Assignments</h3>
-			<ol>
-				<li>Final Project Pre-Production Creative Draft (Scope, Design Proposal & Content Outline)</li>
-				<li>Analysis of your technical requirements</li>
+			<h3>Assignments: Final Project Pre-Production Draft</h3>
+			<ol>	
+				    <li>Creative Direction & Design Proposal</li>
+                    <li>Two different user stories based on two different personas from target userbase</li>
+                    <li>Comprehensive Content Outline</li>
+                    <li>Research analysis of technical requirements and technical scope</li>
 			</ol>
 		</section>
 
