--- a/assignment-10.html
+++ b/assignment-10.html
@@ -56,13 +56,19 @@
                 The pre-production draft should be presented as a simple illustrated HTML webpage covering the following sections:
                 <ol>
                     <li>Creative Direction & Design Proposal</li>
-                    <li>Two different user stories based on two different personas from target userbase</li>
+                    <li>Two different user stories based on two different personas from your target userbase</li>
                     <li>Comprehensive Content Outline</li>
                     <li>Research analysis of technical requirements and technical scope</li>
                 </ol>
             </p>
            
-
+            <p>
+               For section two, you will create two personas to capture the most important aspects of who your users might be, what they might do online, and why they might end up in your website. Think of this as an exercise of the imagination. Each of these personas should represent a core group of people that might want to spent some time in your website. Give them names, and an image that represents who they are. Believability of the persona is more important than being factual (though the persona should be based on facts). Key point: This persona is never about you.
+           </p>
+           
+            <p>
+                User stories: Once you have written your personas, create a scenario for each one of them, describing how they would explore your website and benefit from it. Will they like it? Will they recommend it? Will they ever come back?
+            </p>
 
             <h2>Due Date</h2>
             <p>
