--- a/apis/instagram/index.html
+++ b/apis/instagram/index.html
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
 <!-- based on url=(0053)http://storm.usc.edu/~tsukii/IML-400/watts/index.html -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-
+<html lang="en">
+<head>
+	<meta charset="utf-8" />
     <title>Instagram API V1</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-
     <script src="jquery-1.11.2.min.js"></script>
-
     <script src="insta_script.js"></script>
 
 </head>
 
 <body data-feedly-mini="yes">
-
     <h1>Recent Instagrams tagged #WattsTowers</h1>
     <div class="hashtag"></div>
-    
-    
-
-
-
-</body></html>
+</body>
+</html>
