--- a/assignment-5.html
+++ b/assignment-5.html
@@ -71,6 +71,7 @@
             </p>
             <ol>
                 <li><a href="spring-2014/apis/delicious-api-v2.html?user=blackaller">Delicious API</a></li>
+                <li><a href="apis/instagram/">Instagram API V1</a> - displays recent images featuring a given hashtag (deprecated)</li>
                 <li><a href="apis/flickr/">Flickr API</a> - takes optional user id (view source)</li>
                 <li><a href="apis/tumblr/">Tumblr API</a> - using static data to bypass oAuth server code</li>
                 <li><a href="fall-2012/map-bg/">Google Maps API Examples</a></li>
