instagram api v1 attribution

--- a/apis/instagram/index.html
+++ b/apis/instagram/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body data-feedly-mini="yes">
-    <h1>Recent Instagrams tagged #WattsTowers</h1>
+    <h1>Recent Instagrams tagged #WattsTowers (via tsukii)</h1>
     <div class="hashtag"></div>
 </body>
 </html>
