instagram api v1 style

--- a/apis/instagram/index.html
+++ b/apis/instagram/index.html
@@ -12,6 +12,6 @@
 
 <body data-feedly-mini="yes">
     <h1>Recent Instagrams tagged #WattsTowers (<a href="http://storm.usc.edu/~tsukii/">via tsukii</a>)</h1>
-    <div class="hashtag"></div>
+    <ul id="container"></ul>
 </body>
 </html>
