--- a/examples.html
+++ b/examples.html
@@ -116,6 +116,9 @@
 		<ol><h3>Public APIs</h3>	
 			<li><a href="spring-2013/twitter/">Old Twitter API</a> [Broken. Needs update to new API]</li>
 			<li><a href="spring-2014/apis/delicious-api-v2.html?user=blackaller">Delicious API</a></li>
+			<li><a href="apis/instagram/">Instagram API V1</a> - displays recent images featuring a given hashtag (deprecated)</li>
+            <li><a href="apis/flickr/">Flickr API</a> - takes optional user id (view source)</li>
+            <li><a href="apis/tumblr/">Tumblr API</a> - using static data to bypass oAuth server code</li>
 			<li><a href="fall-2012/map-bg/">Google Maps API Examples</a></li>
 			<li><a href="fall-2012/map-bg/api-test-1.html">Google Maps API Test</a></li>
 			<li><a href="fall-2012/map-bg/zooming.html">Google Maps API Zooming in</a> [Refresh a couple of times for full effect]</li>
