--- a/assignment-11.html
+++ b/assignment-11.html
@@ -43,6 +43,10 @@
         .due-date{
             color:gold;
         }
+        p{
+            margin:0;
+            padding:0;
+        }
         strong{
             color:gold;
         }
@@ -58,25 +62,33 @@
                 <h4>Final Project Landing Page</h4>
                 At this point you have clarity on design and scope and you should have all your tech resources and assets available, so you're ready to start testing the waters and build a prototype for your landing page. This is a list of things you should deliver next week:
                 <ol>
-                    <li>Landing page visual design in place
+                    <li>Landing page <strong>visual design</strong> in place
                          <ul><li>CSS</li>
                          <li>Fonts</li>
                          <li>Icons</li>
                          <li>etc</li></ul>
                     </li>
-                    <li>Landing page final assets in place
+                    <li>Landing page <strong>final assets</strong> in place
                         <ul><li>Images</li>
                          <li>Videos</li>
                          <li>Sounds</li>
                          <li>etc</li></ul>
-                    <li>First user experience functionality working (landing page only)</li>
-                    <li>Active links to placeholder locations and/or other sections</li>
-                </ol>
-            </p>
+                    <li>Working first user experience <strong>functionality</strong> (landing page only)</li>
+                    <li><strong>Active links</strong> to placeholder locations and/or other sections</li>
+
+
            
-            <p>
-                Usability testing: Test your landing page design finding and using real-life approximations to the personas you developed last week. Invite a classmate, friend or family member to use your website. Did they understand it? Could they perform the tasks you had prepared for them? Could they find what they were looking for? Was it an engaging experience for them? Write down a brief usability report explaining how your tests informed your design.
-            </p>
+
+                <li><strong>Usability testing</strong>. Test your landing page design finding and using real-life approximations to the personas you developed last week. Invite a classmate, friend or family member to use your website.
+                <ul>
+                    <li>Did they understand it?</li>
+                    <li>Could they perform the tasks you had prepared for them?</li>
+                    <li>Could they find what they were looking for?</li>
+                    <li>Was it an engaging experience for them?</li>
+                </ul>
+                Write down a brief usability report explaining how your tests informed your design.
+            </li>
+             </ol>
 
             <h2>Due Date</h2>
             <p>
