totally adding adult swim to assignment 8 resources list

--- a/assignment-8.html
+++ b/assignment-8.html
@@ -110,6 +110,7 @@
                     <li><a href="http://vincemckelvie.com/">Vince Mckelvie</a> - <a href="http://vincemckelvie.tumblr.com/">at tumblr</a> - <a href="http://emoji.ink/">emoji.ink</a> - <a href="http://vincemckelvie.com/pulse/">Pulse</a> - <a href="http://veryman.expert/">Veryman Expert</a></li>
                 </ol>
                 <ol><h3>Net Art Social Platforms and Commercialization</h3>
+                    <li><a href="http://www.adultswim.com">Adult Swim</a> and <a href="http://www.adultswim.com/etcetera/">Adult Swim: Etcetera</a> Net Art meets TV Network</li>
                     <li><a href="http://to.be/">To.be</a> Net Art custom t-shirts and everything</li>
                     <li><a href="http://newhive.com/">Newhive</a> is a multimedia publishing platform</li>
                     <li><a href="http://www.so.cl/#/picotale">So.cl Picotale</a> Search based and meme maker</li>
