--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
                 <li><a href="assignment-8.html">Net Art: Case studies</a></li>
                 <li><a href="assignment-9.html">Putting It All Together: Making & Breaking the Web</a></li>
                 <li><a href="assignment-10.html">Final Project Pre-Production Draft</a></li>
+                <li><a href="assignment-11.html">Final project Landing Page First Pass</a></li>
             </ol>
         </div>
         
