adding linkto:clickdragclick to assignment 8

--- a/assignment-8.html
+++ b/assignment-8.html
@@ -107,7 +107,7 @@
                     <li><a href="http://turboavedon.com/">LA Turbo Avedon</a></li>
                     <li><a href="http://builder.clubrothko.com/">club rothko builder</a></li>
                     <li><a href="http://www.irational.org/tttp/primera.html">Technologies for the People</a></li>
-                    <li><a href="http://vincemckelvie.com/">Vince Mckelvie</a> - <a href="http://vincemckelvie.tumblr.com/">at tumblr</a> - <a href="http://emoji.ink/">emoji.ink</a> - <a href="http://vincemckelvie.com/pulse/">Pulse</a> - <a href="http://veryman.expert/">Veryman Expert</a></li>
+                    <li><a href="http://vincemckelvie.com/">Vince Mckelvie</a> - <a href="http://vincemckelvie.tumblr.com/">at tumblr</a> - <a href="http://emoji.ink/">emoji.ink</a> - <a href="http://vincemckelvie.com/pulse/">Pulse</a> - <a href="http://veryman.expert/">Veryman Expert</a> - <a href="http://clickdragclick.com/">Click Drag Click</a></li>
                 </ol>
                 <ol><h3>Net Art Social Platforms and Commercialization</h3>
                     <li><a href="http://www.adultswim.com">Adult Swim</a> and <a href="http://www.adultswim.com/etcetera/">Adult Swim: Etcetera</a> Net Art meets TV Network</li>
