--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
                 <li><a href="assignment-9.html">Putting It All Together: Making & Breaking the Web</a></li>
                 <li><a href="assignment-10.html">Final Project Pre-Production Draft</a></li>
                 <li><a href="assignment-11.html">Final project Landing Page First Pass</a></li>
+                <li><a href="assignment-12.html">Final project Build Candidate</a></li>
             </ol>
         </div>
         
