--- a/syllabus-spring-2015.html
+++ b/syllabus-spring-2015.html
@@ -713,7 +713,7 @@ to Graphics Programming - Includes an interactive <a href="http://pixelshaders.c
 
 			<h3>Assignments</h3>
 			<ol>
-				<li>First Draft of Final Project</li>
+				<li>Final Project Build Candidate</li>
 			</ol>
 		</section>
 
