adding claudia mate to net art case studies

--- a/assignment-8.html
+++ b/assignment-8.html
@@ -103,6 +103,7 @@
                     <li><a href="http://www.w-a-l-l-p-a-p-e-r-s.net/">w-a-l-l-p-a-p-e-r-s</a></li>
                     <li><a href="http://hypergeography.tumblr.com/">Hypergeography</a> by <a href="http://joehamilton.info/">Joe Hamilton</a></li>
                     <li><a href="http://nickbriz.com/facebook/">How To / Why Leave Facebook</a> by <a href="http://nickbriz.com/">Nick Briz</a></li>
+                    <li><a href="http://claudiamate.com/">Claudia Maté</a></li>
                     <li><a href="http://emiliogomariz.net/">Emilio Gomariz</a></li>
                     <li><a href="http://turboavedon.com/">LA Turbo Avedon</a></li>
                     <li><a href="http://builder.clubrothko.com/">club rothko builder</a></li>
