--- a/web-audio/simple-demo/test.html
+++ b/web-audio/simple-demo/test.html
@@ -49,9 +49,11 @@ section > * {
 }
 #fft {
   -webkit-transform: translateX(-350px) rotateX(-30deg) rotateY(30deg);
+  display:hidden;
 }
 #fft2 {
   -webkit-transform: translateX(-530px) rotateX(-30deg) rotateY(-30deg);
+  display:hidden;
 }
 aside {
   position: absolute;
@@ -73,7 +75,7 @@ label {
   cursor: pointer;
 }
 #playbutton.playing {
-  opacity: 0.1;
+  opacity: 0.6;
 }
 /*
 #playbutton.playing:hover {
@@ -88,41 +90,45 @@ label {
   position: absolute;
   z-index: -1;
   right: 1em;
-  opacity: 0.5;
   top: 0.25em;
-  text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.9), 0px -1px 0px rgba(0, 0, 0, 0.7);
-  color: transparent;
+  color: rgba(255,0,0,1);
   font-weight: 400;
+  z-index:40;
+}
+#bottom-bar{
+  position: fixed;
+  bottom: 0;
+  width:100%;
+  height: 80%;
+  background: rgba(255,0,0,1);
+  z-index:0;
 }
 </style>
 </head>
 <body>
 
-<details>
-  <summary>What's this?</summary>
-  <div>
-    <p>Example of the Web Audio API's integration with the HTML5 &lt;audio&gt; element.
-    See <a href="https://dvcs.w3.org/hg/audio/raw-file/tip/webaudio/webrtc-integration.html" target="_blank" title="Spec link" alt="Spec link"><code>createMediaSourceElement()</code></a>.</p>
-    <p><b>Support:</b> Chrome 18.0.1025.2 (currently Canary).</p>
-  </div>
-</details>
 <aside>
-  <p>
+  <p style="display:none;">
     <input type="checkbox" id="toggle-audio" onclick="document.querySelector('#myaudio').classList.toggle('show');"> <label for="toggle-audio">Show &lt;audio&gt; element</label>
   </p>
   <div id="myaudio"></div>
 </aside>
 
 <section>
-  <div style="margin-top:-350px;"><canvas id="playbutton" width="125" height="125"></canvas></div>
-  <div>
+  <div style="position:fixed; top:20px; left:20px; z-index:40"><canvas id="playbutton" width="125" height="125"></canvas></div>
+  <div style="display:none;">
+
     <canvas id="fft" class="fft" width="512" height="200"></canvas>
     <canvas id="fft2" class="fft" width="512" height="200"></canvas>
+
   </div>
+  
+  <div id="bottom-bar"></div>
   <h2 id="current-time"></h2>
 </section>
 <script>
 (function() {
+
 CanvasRenderingContext2D.prototype.line = function(x1, y1, x2, y2) {
   this.lineCap = 'round';
   this.beginPath();
@@ -233,11 +239,15 @@ window.playButton = canvas;
 (function() {
 var canvas = document.getElementById('fft');
 var ctx = canvas.getContext('2d');
+
 canvas.width = document.body.clientWidth / 1.4;
 
 var canvas2 = document.getElementById('fft2');
 var ctx2 = canvas2.getContext('2d');
 canvas2.width = canvas.width;
+
+var bar = document.getElementById('bottom-bar');
+var timer = document.getElementById('current-time');
 
 const CANVAS_HEIGHT = canvas.height;
 const CANVAS_WIDTH = canvas.width;
@@ -257,18 +267,18 @@ audio.addEventListener('timeupdate', function(e) {
 document.querySelector('#myaudio').appendChild(audio);
 
 // Check for non Web Audio API browsers.
-if (!window.webkitAudioContext) {
+if (!window.AudioContext) {
   alert("Web Audio isn't available in your browser. But...you can still play the HTML5 audio :)");
   document.querySelector('#myaudio').classList.toggle('show');
   document.querySelector('aside').style.marginTop = '7em';
   return;
 }
 
-var context = new webkitAudioContext();
+var context = new AudioContext();
 var analyser = context.createAnalyser();
 
 function rafCallback(time) {
-  window.webkitRequestAnimationFrame(rafCallback, canvas);
+  window.requestAnimationFrame(rafCallback, canvas);
 
   var freqByteData = new Uint8Array(analyser.frequencyBinCount);
   analyser.getByteFrequencyData(freqByteData); //analyser.getByteTimeDomainData(freqByteData);
@@ -280,11 +290,11 @@ function rafCallback(time) {
   var numBars = Math.round(CANVAS_WIDTH / SPACER_WIDTH);
 
   ctx.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
-  ctx.fillStyle = '#F6D565';
+  ctx.fillStyle = 'dodgerblue';
   ctx.lineCap = 'round';
 
   ctx2.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
-  ctx2.fillStyle = '#3A5E8C';
+  ctx2.fillStyle = 'deeppink';
   ctx2.lineCap = 'round';
 
   // Draw rectangle for each frequency bin.
@@ -300,7 +310,12 @@ function rafCallback(time) {
     var magnitude = freqByteData[i + OFFSET];
     ctx.fillRect(i * SPACER_WIDTH, CANVAS_HEIGHT, BAR_WIDTH, -magnitude);
     ctx2.fillRect(i * SPACER_WIDTH, CANVAS_HEIGHT, BAR_WIDTH, -magnitude);
+    //console.log(magnitude);
+    bar.style.background = "rgba(" + (2 * magnitude) % 255 + ", " + (magnitude) % 255 + ", " + (magnitude) % 255 + ", 1)";
+    timer.style.color = "rgba(" + (2 * magnitude) % 255 + ", " + (magnitude) % 255 + ", " + (magnitude) % 255 + ", 1)";
   }
+  //bar.style.background = "rgba(" + 0 + ", " + 255 + ", " + 0 + ", 1)";
+  //console.log(bar.style.background);
 }
 
 function onLoad(e) {
