--- a/web-audio/simple-demo/test.html
+++ b/web-audio/simple-demo/test.html
@@ -99,7 +99,7 @@ label {
   position: fixed;
   bottom: 0;
   width:100%;
-  height: 80%;
+  //height: 80%;
   background: rgba(255,0,0,1);
   z-index:0;
 }
@@ -312,6 +312,7 @@ function rafCallback(time) {
     ctx2.fillRect(i * SPACER_WIDTH, CANVAS_HEIGHT, BAR_WIDTH, -magnitude);
     //console.log(magnitude);
     bar.style.background = "rgba(" + (2 * magnitude) % 255 + ", " + (magnitude) % 255 + ", " + (magnitude) % 255 + ", 1)";
+    bar.style.height = 400 + (4 * magnitude) % 255 + "px";
     timer.style.color = "rgba(" + (2 * magnitude) % 255 + ", " + (magnitude) % 255 + ", " + (magnitude) % 255 + ", 1)";
   }
   //bar.style.background = "rgba(" + 0 + ", " + 255 + ", " + 0 + ", 1)";
