syllabus exam date

--- a/syllabus-spring-2015.html
+++ b/syllabus-spring-2015.html
@@ -741,7 +741,7 @@ to Graphics Programming - Includes an interactive <a href="http://pixelshaders.c
 		</section>
 
 		<section class="notice">
-			<h2 >Exam date TBD - <span style="color:red;">Final Project Deadline and Presentation due on exam date</span></h2>
+			<h2 >Exam date Wednesday May 6 from 4:00-6:00pm - <span style="color:red;">Final Project Deadline and Presentation due on exam date</span></h2>
 		</section>
 
 		<section class="footer">
