--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             Hello World
         </div>
         
-        <h3>Welcome to IML 400 Spring 2015 [ <a href="syllabus-spring-2015.html" onclick="alert('this is a work in progress')">Syllabus</a> ]</h3>
+        <h3>Welcome to IML 400 Spring 2015 [ <a href="syllabus-spring-2015.html" onclick="//alert('this is a work in progress')">Syllabus</a> ]</h3>
         <h3>Lecturer <a href="http://blacklog.mitplw.com/">Luis Blackaller</a><br />
         Teacher Assistant <a href="http://rosemarycomella.com/">Rosemary Comella</a></h3>
 
