link to web audio demo from homepage

--- a/examples.html
+++ b/examples.html
@@ -157,6 +157,15 @@
                 </ul></li>
 		</ol>
 
+		<ol><h3>Web Audio API</h3>
+            <li><a href="web-audio/simple-demo/test.html">Audio Responsive Square</a></li>
+		</ol>
+
+
+
+
+
+
 		<p style="text-align:center; margin:60px 0 0 0; padding:0;">
 	        <img src="fall-2012/images/roboteeno.png" style="display:block; margin:auto;"/>
 	    </p> 
