--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             /*max-width: 720px;*/
             margin:0px auto;
             overflow:auto;
+            padding:10px;
             margin-bottom:200px;
         }
         #footer{
@@ -82,11 +83,12 @@
             padding:0px 40px;
         }
         #student-websites, #assignments, #links, #links-2{
-            width:242px;
+            width:328px;
             float:left;
         }
         #student-websites h3, #assignments h3, #links h3, #links-2 h3{
             margin-bottom:5px;
+            color:gold;
         }
         ol{
             padding: 0 10px 0 20px;
@@ -130,9 +132,7 @@
                 <li><a href="http://storm.usc.edu/~cbthomas/IML-400/">Christopher Brady Thomas</a></li>
                 <li><a href="http://storm.usc.edu/~tsukii/IML-400/">Kevin Hikaru Tsukii</a></li>
             </ol>
-        </div>
-
-        <div id="assignments">
+        
             <h3>Assignments</h3>
             <ol>
                 <li><a href="assignment-1.html">HTML & CSS Review</a></li>
@@ -251,6 +251,16 @@
                 <li><a href="http://mozvr.com">MozVR</a></li>
                 <li><a href="https://vr.chromeexperiments.com">Chrome Experiments for Virtual Reality</a></li>
                 <li><a href="http://elevr.com">eleVR web based virtual reality video</a></li>
+            </ol>
+
+            <h3>Web Audio API</h3>
+            <ol>
+                <li><a href="http://webaudioapi.com/">Web Audio API</a> book, tutorials and examples</li>
+                <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/Web_Audio_API">Mozilla Web Audio API docs</a></li>
+                <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/Web_Audio_API/Using_Web_Audio_API">Mozilla using the Web Audio API</a></li>
+                <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/Web_Audio_API/Visualizations_with_Web_Audio_API">Mozilla Visualizations with Web Audio API</a></li>
+                <li><a href="http://webaudiodemos.appspot.com/">Web Audio Demos</a></li>
+
             </ol>
 
             <h3>Automation</h3>
