--- a/web-audio/simple-demo/test.html
+++ b/web-audio/simple-demo/test.html
@@ -122,7 +122,7 @@ function rafCallback(time) {
     bar.style.height = (4 * magnitude) + "px";
     bar.style.width = (4 * magnitude) + "px";
     bar.style.top = ((window.innerHeight / 2) - (parseInt(bar.style.height.split("p")[0]) / 2 )) + "px";
-    bar.style.transform = "rotate(45" + (magnitude / 2) +"deg)";
+    bar.style.transform = "rotate(45" + (magnitude * 1) +"deg)";
 
 
 
