--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         }
         #student-websites h3, #assignments h3, #links h3, #links-2 h3{
             margin-bottom:5px;
-            color:gold;
+            /*color:gold;*/
         }
         ol{
             padding: 0 10px 0 20px;
