web audio demo edit

--- a/web-audio/simple-demo/test.html
+++ b/web-audio/simple-demo/test.html
@@ -78,6 +78,12 @@ var timer = document.getElementById('current-time');
 
 window.audio = new Audio();
 audio.src = 'test.ogg';
+
+//wanna make this work
+//audio.src = 'http://api.soundcloud.com/tracks/6981096/stream?client_id=a6fd3417a125ba57cf66016a1b324af4';
+//good resources here http://www.zya.cc/web-audio
+
+
 audio.controls = true;
 //audio.autoplay = true;
 audio.loop = true;
