--- a/examples.html
+++ b/examples.html
@@ -157,8 +157,9 @@
                 </ul></li>
 		</ol>
 
-		<ol><h3>Web Audio API</h3>
-            <li><a href="web-audio/simple-demo/test.html">Audio Responsive Square</a></li>
+		<ol><h3>Audio and Web Audio</h3>
+			<li><a href="web-audio/simple-demo/test.html">Audio Responsive Square</a></li>
+            <li><a href="web-audio/volume-scroll">Document scroll sound controls</a></li>
 		</ol>
 
 
